added snoopy media file

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             
             <!-- Dancing Snoopy GIF -->
             <div class="snoopy-dance">
-                <img src="https://media.tenor.com/JLAeZID_mocAAAAM/dancing-snoopy.gif" alt="Dancing Snoopy">
+                <img src="media/snoopyDancing.gif" alt="Dancing Snoopy">
             </div>
             
             <div class="hearts-animation">
