--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <div class="content">
             <h1 class="question-text">Will you be my Valentine? 💖</h1>
             
+            <!-- Snoopy love GIF -->
+            <div class="snoopy-love">
+                <img src="media/snoopyLove.gif" alt="Snoopy Love">
+            </div>
+            
             <!-- Container for the buttons -->
             <div class="button-container">
                 <button id="yesBtn" class="choice-button yes-button">YES! 😍</button>
