Fixes to snoopyPeak debug

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Snoopy peeking over the wall -->
         <div class="snoopy-background"></div>
         <div class="content">
-            <h1 class="teaser-text">psst...guess what 👀</h1>
+            <h1 class="teaser-text">Psst...guess what 👀</h1>
             <button id="nextBtn" class="main-button">Click me!</button>
         </div>
     </div>
@@ -29,7 +29,7 @@
             
             <!-- Container for the buttons -->
             <div class="button-container">
-                <button id="yesBtn" class="choice-button yes-button">YES! 😍</button>
+                <button id="yesBtn" class="choice-button yes-button">YES!</button>
                 
                 <!-- NO button wrapper with GIF inside - moves as one unit -->
                 <div id="noButtonWrapper" class="no-button-wrapper">
