--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="snoopy-background"></div>
         <div class="content">
             <h1 class="teaser-text">Psst...guess what 👀</h1>
-            <button id="nextBtn" class="main-button">Click me!</button>
+            <button id="nextBtn" class="main-button">What??</button>
         </div>
     </div>
 
